# fifa2026-open-source-mvp

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  pyproject.toml
.claude/: launch.json
.github/workflows/: nightly.yml
app/: streamlit_app.py
artifacts/: calibration.parquet  disagreement.parquet  leaderboard.parquet  leaderboard_bands.parquet  meta.json  qualification.parquet  qualification_calibration.parquet  scored.parquet  scoreline_calibration.parquet  scoreline_leaderboard.parquet  scoreline_topn.parquet  surprises.parquet  tournament.parquet  upcoming.parquet
data/: backtest.db  fifa2026.db
data/raw/: bracket_2026.csv  confederations.csv  routing_r32.parquet
docs/: DESIGN.md  PLAN.md  block-v-findings.md  stacker_refresh.md
docs/tuning/: PHASE_OUTCOMES.md  dc_tournament_weighted.md  elo_nu.md  phase2_goals.md  stacking.md  (+1 more)
scripts/: build_confederations.py  build_groups_2026.py  fetch_bracket_2026.py  train_stacker.py  tune_dc_tournament_weighted.py  tune_elo_nu.py  tune_negbin.py  tune_phase2_goals.py
tests/: test_app.py  test_artifacts.py  test_asof.py  test_backtest.py  test_bivariate.py  test_bma.py  test_board.py  test_calibration.py  test_confederations.py  test_dixoncoles.py  test_elo.py  test_hierarchical.py  test_ingest.py  test_leaderboard.py  test_market.py  test_models_base.py  test_negbin.py  test_orchestrate.py  test_predict_cli.py  test_predictions_log.py  test_roster.py  test_score.py  test_scoreline.py  test_sim_groups.py  test_sim_montecarlo.py  test_sim_routing.py  test_stacking.py  test_tournament_backtest.py
(+35 files in other folders)
